[gd_scene load_steps=2 format=3 uid="uid://cq2lp2yh80l1e"]

[ext_resource type="Script" uid="uid://bch1p3l0ple2x" path="res://scenes/starbase/trade_component.gd" id="1_mujfd"]

[node name="TradeComponent" type="Node3D"]
script = ExtResource("1_mujfd")

[node name="TradeUI" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 648.0

[node name="ColorRect" type="ColorRect" parent="TradeUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -379.0
offset_top = -252.0
offset_bottom = 252.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.168627, 0.243137, 0.282353, 1)

[node name="StarbaseTradingMenu" type="Control" parent="TradeUI/ColorRect"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 379.0
offset_bottom = 504.0

[node name="ScrollContainer" type="ScrollContainer" parent="TradeUI/ColorRect/StarbaseTradingMenu"]
layout_mode = 2
offset_left = 9.0
offset_top = 11.0
offset_right = 372.0
offset_bottom = 440.0

[node name="TradeButtonContainer" type="VBoxContainer" parent="TradeUI/ColorRect/StarbaseTradingMenu/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomRow" type="Control" parent="TradeUI/ColorRect/StarbaseTradingMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -189.5
offset_top = -57.0
offset_right = 188.5
grow_horizontal = 2
grow_vertical = 0

[node name="Back" type="Button" parent="TradeUI/ColorRect/StarbaseTradingMenu/BottomRow"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -53.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"

[node name="TradeMode" type="Button" parent="TradeUI/ColorRect/StarbaseTradingMenu/BottomRow"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -53.0
offset_right = 161.0
offset_bottom = -10.0
grow_vertical = 0
text = "Selling to Starbase"

[node name="SellMenu" type="Control" parent="TradeUI/ColorRect/StarbaseTradingMenu"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_bottom = 205.0

[node name="ColorRect" type="ColorRect" parent="TradeUI/ColorRect/StarbaseTradingMenu/SellMenu"]
layout_mode = 0
offset_left = -173.0
offset_bottom = 211.0
color = Color(0.096667, 0.149151, 0.175313, 0.882353)

[node name="Material" type="Label" parent="TradeUI/ColorRect/StarbaseTradingMenu/SellMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -236.0
offset_top = 1.0
offset_right = 64.0
offset_bottom = 24.0
text = "SELL"
horizontal_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="TradeUI/ColorRect/StarbaseTradingMenu/SellMenu"]
layout_mode = 0
offset_left = -169.0
offset_top = 26.0
offset_right = -5.0
offset_bottom = 31.0

[node name="BuySell" type="Button" parent="TradeUI/ColorRect/StarbaseTradingMenu/SellMenu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -50.0
offset_right = -5.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
text = "Sell"

[node name="QuantitySlider" type="HSlider" parent="TradeUI/ColorRect/StarbaseTradingMenu/SellMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -161.0
offset_top = 127.0
offset_right = -12.0
offset_bottom = 143.0
min_value = 1.0
max_value = 200.0
value = 1.0

[node name="QuantityManual" type="LineEdit" parent="TradeUI/ColorRect/StarbaseTradingMenu/SellMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -121.0
offset_top = 89.0
offset_right = -52.0
offset_bottom = 120.0
placeholder_text = "1"
alignment = 1

[node name="SellValue" type="Label" parent="TradeUI/ColorRect/StarbaseTradingMenu/SellMenu"]
unique_name_in_owner = true
offset_left = -237.0
offset_top = 32.0
offset_right = 63.0
offset_bottom = 81.0
text = "Credits:
1000000"
horizontal_alignment = 1

[connection signal="pressed" from="TradeUI/ColorRect/StarbaseTradingMenu/BottomRow/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="TradeUI/ColorRect/StarbaseTradingMenu/BottomRow/TradeMode" to="." method="_on_trade_mode_pressed"]
[connection signal="pressed" from="TradeUI/ColorRect/StarbaseTradingMenu/SellMenu/BuySell" to="." method="_on_buy_sell_pressed"]
[connection signal="value_changed" from="TradeUI/ColorRect/StarbaseTradingMenu/SellMenu/QuantitySlider" to="." method="_on_quantity_slider_value_changed"]
[connection signal="text_changed" from="TradeUI/ColorRect/StarbaseTradingMenu/SellMenu/QuantityManual" to="." method="_on_quantity_manual_text_changed"]
